[project]
name = "trigger-fix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pyinstaller>=6.13.0",
    "pyqt5>=5.15.11",
    "scipy>=1.15.2",
]
